--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+  background-color: #0d1117;
+  color: #f0f6fc;
 }
