create landing page and navbar

--- a/client/src/pages/auth/style.css
+++ b/client/src/pages/auth/style.css
@@ -1,6 +1,5 @@
 
 .auth-container{
-  border:  red 2px solid;
   height: 100vh;
   display: flex;
   justify-content: space-between;
@@ -16,21 +15,22 @@
 .auth-container .form-container{
   border:  #30363d 1px solid;
   width:35%;
-  /* background-color:#161b22; */
   padding:  30px;
   margin: 0 auto;
   border-radius: 5px;
 }
 
-.auth-container .form-container .text-field {
+.auth-container .form-container .text-field ,
+.auth-container .form-container Button{
   display: block;
   margin: 20px auto;
-  width: 90%;
-  color:  white !important;
-  border: 1px #30363d solid;
+  width: 70%;
 }
 .auth-container .form-container .form-title{
   width: max-content;
   margin: 0 auto;
 }
 
+.auth-container .form-container Button{
+  margin-top: 30px;
+}
