--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,9 @@ body{
   padding: 0;
   font-family: 'Inter', sans-serif;
   box-sizing: border-box;
-  background-color: #0d1117;
-  color: #f0f6fc;
+  /* color: #2a2a2a; */
+  color: #ececec;
+
+
+  background-color: #111827;
 }
