--- a/client/src/pages/auth/style.css
+++ b/client/src/pages/auth/style.css
@@ -3,7 +3,14 @@
   height: 100vh;
   display: flex;
   justify-content: space-between;
+  flex-direction: row-reverse;
   align-items: center;
+  border: 2px solid white;
+  /* background-image: linear-gradient(to right, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('../../assets/image/verticalGrid.png'); */
+
+
+  background-size: cover;
+
 }
 
 
@@ -12,8 +19,9 @@
   height: 100vh;
   width: 45%;
 }
+
+
 .auth-container .form-container{
-  border:  #30363d 1px solid;
   width:35%;
   padding:  30px;
   margin: 0 auto;
