--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -48,30 +48,26 @@
   overflow: hidden;
 }
 
-.view-btn p {
-  padding: 5px 10px;
-  border: 1.5px solid #007bff;
-  border-radius: 3px;
-  text-decoration: none;
-  color: #007bff;
-  max-width: 45%;
-  font-size: 14px;
-}
 
 .btn-group {
   display: flex;
-  align-items: center;
   justify-content: flex-start;
   border: 1px #4D185F solid;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   width: max-content;
   border-radius: 3px;
   padding: 5px 12px 5px 5px;
+  position: absolute;
+  bottom: 15px;
+  left: 10px;
 }
 
-.btn-group .btn p {
-  padding: 0px 7px;
+.btn-group  p {
+  text-align: center;
   color: #fff;
   text-decoration: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  align-self: center ;
+  margin: 0 !important;
 }
-
