create ProfileHeader component contains all info about users [name, bio, image]

--- a/client/src/components/ProfileHeader/style.css
+++ b/client/src/components/ProfileHeader/style.css
@@ -1,5 +1,5 @@
 .images-container{
-  background-image:linear-gradient( #0c1b39,#0e1e4300) ;
+  /* background-image:linear-gradient( #0c1b39,#0e1e4300) ; */
   position: relative;
   padding-bottom: 50px;
 }
