display your blogs and photos in your profile

--- a/client/src/components/PhotosContainer/style.css
+++ b/client/src/components/PhotosContainer/style.css
@@ -2,3 +2,10 @@
   width: 90%;
   margin: 0 auto;
 }
+
+.photos-container-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px auto 40px;
+}
